--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
+title: Arhum Jain
+description: Welcome to my profile!
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
